# actix-web-neon-starter

./: Cargo.toml  LICENSE  README.md  schema.sql
locales/en/: main.ftl
locales/fr/: main.ftl
src/: main.rs
src/db/: mod.rs
