[package]
name = "actix-web-neon-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.5.0"
diesel = { version = "2.2", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
jsonwebtoken = "8.1.0"
argon2 = "0.4.0"
uuid = { version = "1.2", features = ["v4"] }
chrono = "0.4.19"
validator = "0.15.0"
i18n-embed = "0.15.0"
env_logger = "0.10.0"

[dependencies.diesel_migrations]
version = "2.0"
features = ["postgres"]
